# drogon-template

./: .gitignore  CMakeLists.txt  README.md
config/: config-template.json
include/Controllers/: LoginController.hpp  StaticController.hpp
include/Database/: DatabaseManager.hpp
include/Filters/: JwtFilter.hpp
include/Utils/: JwtUtils.hpp  Singleton.hpp
src/: main.cpp
src/Controllers/: LoginController.cpp  StaticController.cpp
src/Database/: DatabaseManager.cpp
src/Filters/: JwtFilter.cpp
src/Models/: model-template.json
static/: swagger.json
